[workspace]

members = [
    "sgtypes",
    "sgnetwork",
    "network-libp2p",
    "network-libp2p/peerset",
    "sgwallet",
    "node",
    "node/node_proto",
    "node/node_client",
    "node/node_service",
    "node/node_internal",
    "cli",
    "sgcompiler",
    "sgchain",
    "sgfaucet/faucet-proto",
    "sgfaucet/faucet-service",
    "sgfaucet/faucet-client",
    "sgstorage",
    "router",
    "router/graphdb",
    "router/ant",
]

exclude = ["libra"]

[replace]
"libp2p:0.7.0" = { git = "https://github.com/fikgol/rust-libp2p", tag = "v0.7.0-stargate" }
