[workspace]

members = [
    "sgtypes",
    "sgnetwork",
    "network-libp2p",
    "network-libp2p/peerset",
    "sgwallet",
    "node",
    "node/node_proto",
    "node/node_client",
    "node/node_service",
    "node/node_internal",
    "cli",
    "sgcompiler",
    "sgchain",
    "sgfaucet/faucet-proto",
    "sgfaucet/faucet-service",
    "sgfaucet/faucet-client",
    "sgstorage",
    "router",
    "router/graphdb",
    "router/ant",
    "router/stats"
]

exclude = ["libra"]