[package]
name = "cli"
version = "0.1.0"
authors = ["hit.cs.lijun@gmail.com"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }

bincode = "1.1.1"
grpcio = "0.4.3"
hex = "0.3.2"
hyper = "0.12.33"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "4.1.0"
tokio = "0.1.22"
rust_decimal = "1.0.1"
num-traits = "0.2"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.2.15"
tempfile = "3.1.0"

config = { path = "../libra/config" }
crypto = { path = "../libra/crypto/crypto" }
failure = { package = "failure_ext", path = "../libra/common/failure_ext" }
libc = "0.2.60"
logger =  { path = "../libra/common/logger" }
metrics = { path = "../libra/common/metrics" }
proto_conv = { path = "../libra/common/proto_conv" }
types = { path = "../libra/types" }
vm_genesis = { path = "../libra/language/vm/vm_genesis" }
node_client = { path = "../node/node_client"}
cli_wallet = { path = "./cli_wallet" }
node_proto = { path = "../node/node_proto" }
admission_control_service = { path = "../libra/admission_control/admission_control_service" }
admission_control_proto = { path = "../libra/admission_control/admission_control_proto" }
sgchain = { path = "../sgchain" }
star_types = { path = "../star_types" }
sgcompiler = { path = "../sgcompiler" }
canonical_serialization = { path = "../libra/common/canonical_serialization" }

[dev-dependencies]
crypto = { path = "../libra/crypto/crypto", features = ["testing"] }
types = { path = "../libra/types" }