[package]
name = "cli"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }

bincode = "1.1.1"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
hex = "0.3.2"
hyper = "0.12.33"
itertools = "0.8.0"
proptest = "0.9.2"
rustyline = "4.1.0"
tokio = "0.1.22"
rust_decimal = "1.0.1"
num-traits = "0.2"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.2.15"
tempfile = "3.1.0"

libra-config = { path = "../libra/config" }
libra-crypto = { path = "../libra/crypto/crypto" }
failure = { package = "libra-failure-ext" , path = "../libra/common/failure-ext" }
libc = "0.2.60"
libra-logger =  { path = "../libra/common/logger" }
prost = "0.5.0"
libra-types = { path = "../libra/types" }
vm-genesis = { path = "../libra/language/vm/vm-genesis" }
node_proto = { path = "../node/node_proto"}
node_client = { path = "../node/node_client"}
cli_wallet = { path = "./cli_wallet" }
admission-control-proto = { path = "../libra/admission_control/admission-control-proto" }
sgchain = { path = "../sgchain" }
sgtypes = { path = "../sgtypes" }
sgcompiler = { path = "../sgcompiler" }
lcs = { path = "../libra/common/lcs", package = "libra-canonical-serialization" }

[dev-dependencies]
