[package]
name = "node"
version = "0.1.0"
authors = ["hit.cs.lijun@gmail.com"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
network = { package = "network", path = "../network"}

switch = { package = "switch",path="../switch"}
futures = { version = "0.3.0-alpha.16", package = "futures-preview", features = ["async-await", "nightly", "io-compat", "compat"] }
futures_01 = { version = "0.1.25", package = "futures" }
lazy_static = "1.2.0"
ctrlc = "3.1.3"
structopt = "0.2.15"
parity-multiaddr = "0.4.0"
tokio = "0.1.22"
bytes = "0.4.12"
rand = "0.6.5"
grpcio = "0.4.3"
hex = "0.3.2"

logger = { path = "../common/logger" }
node_service = { path = "./node_service"}
sg_config = { path = "../sgconfig"}
sgwallet = { path="../sgwallet"}
chain_client = { path = "../chain/chain_client"}
types = { path = "../types" }
star_types = { path = "../star_types" }

crypto = { path = "../crypto/crypto", features = ["testing"] }
mock_chain_client = { path = "../chain/mock_chain_client" }
proto_conv = { path = "../common/proto_conv", features = ["derive"] }
failure = { path = "../common/failure_ext", package = "failure_ext" }
node_internal = { path = "./node_internal" }
