[package]
name = "node"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
network = { package = "sgnetwork", path = "../sgnetwork"}

futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
futures_01 = { version = "0.1.25", package = "futures" }
lazy_static = "1.2.0"
ctrlc = "3.1.3"
structopt = "0.2.15"
parity-multiaddr = "0.4.0"
tokio = "=0.2.0-alpha.6"
bytes = "0.4.12"
rand = "0.6.5"
grpcio = "0.4.3"
hex = "0.3.2"

logger = { path = "../libra/common/logger" }
node_service = { path = "./node_service"}
node_rest_api = {path = "./node_rest_api"}
sg_config = { path = "../sgconfig"}
sgwallet = { path="../sgwallet"}
sgchain = { path = "../sgchain"}
libra-types = { path = "../libra/types" }
sgtypes = { path = "../sgtypes" }

crypto = { path = "../libra/crypto/crypto", features = ["testing"] }
prost = "0.5.0"
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
node_internal = { path = "./node_internal" }
env_logger = { version = "0.6" }
