[package]
name = "node"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
network = { package = "sgnetwork", path = "../sgnetwork"}

futures = { version = "0.3.0", features = ["io-compat", "compat"] }
futures_01 = { version = "0.1.25", package = "futures" }
lazy_static = "1.2.0"
ctrlc = "3.1.3"
structopt = "0.2.15"
parity-multiaddr = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.4.12"
rand = "0.6.5"
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
hex = "0.3.2"

libra-logger = { path = "../libra/common/logger" }
node_service = { path = "./node_service"}
sg_config = { path = "../sgconfig"}
sgwallet = { path="../sgwallet"}
libra-types = { path = "../libra/types" }
sgtypes = { path = "../sgtypes" }
sgchain = { path = "../sgchain"}
libra-crypto = { path = "../libra/crypto/crypto"}
libra-wallet = { path = "../libra/client/libra_wallet"}
router = { path = "../router" }
ant = { path = "../router/ant" }
stats = { path = "../router/stats" }

prost = "0.5.0"
anyhow = "1.0"
node_internal = { path = "./node_internal" }
env_logger = { version = "0.6" }
