[package]
name = "router"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sgchain = { path = "../sgchain" }
sgwallet = { path="../sgwallet"}
failure = { path = "../libra/common/failure-ext", package = "libra-failure-ext"  }
libra-logger = { path = "../libra/common/logger"}
graphdb = { path = "./graphdb"}
libra-types = { path = "../libra/types" }
lcs = { path = "../libra/common/lcs", package = "libra-canonical-serialization" }
libra-crypto = { path = "../libra/crypto/crypto"}
libra-tools = {path ="../libra/common/tools", package = "libra-tools"}
sgtypes = { path = "../sgtypes" }

futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
tokio = {package = "tokio", version="=0.2.0-alpha.6", default-features=true}
rand = "0.6.5"