[package]
name = "router"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
sgchain = { path = "../sgchain" }
sgwallet = { path="../sgwallet"}
anyhow = "1.0"
libra-logger = { path = "../libra/common/logger"}
graphdb = { path = "./graphdb"}
libra-types = { path = "../libra/types" }
lcs = { path = "../libra/common/lcs", package = "libra-canonical-serialization" }
libra-crypto = { path = "../libra/crypto/crypto"}
libra-tools = {path ="../libra/common/tools", package = "libra-tools"}
sgtypes = { path = "../sgtypes" }
network = { package = "sgnetwork", path = "../sgnetwork"}
sg_config = { path = "../sgconfig"}

futures = { version = "0.3.0", features = ["io-compat", "compat"] }
futures_01 = { version = "0.1.25", package = "futures" }

tokio = { version = "0.2", features = ["full"] }
rand = "0.6.5"
async-trait = "0.1.13"
hex = { version = "0.3.2", default-features = false }

stats = {path ="../router/stats"}

[dev-dependencies]
libra-config = { path = "../libra/config"}