[package]
name = "sgchain"
version = "0.1.0"
authors = ["tiangong3624749 <tiangong3624749@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
prost = "0.5.0"
prost-ext = { path = "../libra/common/prost-ext" }
protobuf = "2.7"
grpc_helpers = { path = "../libra/common/grpc_helpers" }
libra-types = { path = "../libra/types" }
futures = { version = "=0.3.0-alpha.19", package = "futures-preview", features = ["async-await", "io-compat", "compat"] }
sgtypes = { path = "../sgtypes" }
crypto = { path = "../libra/crypto/crypto" }
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
admission-control-proto = { path = "../libra/admission_control/admission-control-proto" }
admission-control-service = { path = "../libra/admission_control/admission-control-service" }
vm_genesis = { path = "../libra/language/vm/vm_genesis" }
executable-helpers = { path = "../libra/common/executable-helpers" }
executor = { path = "../libra/execution/executor" }
config = { path = "../libra/config"}
structopt = "0.3.2"

crash-handler = { path = "../libra/common/crash-handler" }
grpcio-sys = "0.4.4"
rayon = "1.2.0"
libra-mempool = { path = "../libra/mempool" }
logger = { path = "../libra/common/logger"}
metrics = { path = "../libra/common/metrics" }
storage-client = { path = "../libra/storage/storage-client" }
storage-service = { path = "../libra/storage/storage-service" }
vm_runtime = { path = "../libra/language/vm/vm_runtime" }
vm_validator = { path = "../libra/vm_validator" }
tokio = "=0.2.0-alpha.6"
clap = "2.32"
consensus = { path = "../libra/consensus" }
debug-interface = { path = "../libra/common/debug-interface" }
network = { path = "../libra/network" }
state-synchronizer = { path = "../libra/state-synchronizer" }
tools = { path = "../libra/common/tools" }
atomic_refcell = "0.1.3"
state-view = {path = "../libra/storage/state-view"}
signal-hook = "0.1.10"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
async-trait = "0.1.13"
transaction_builder = { path = "../libra/language/transaction_builder"}

[dev-dependencies]
crypto = { path = "../libra/crypto/crypto", features = ["testing"] }