[package]
name = "sgchain"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false, features = ["prost-codec"] }
prost = "0.5.0"
libra-prost-ext = { path = "../libra/common/prost-ext" }
protobuf = "2.7"
grpc-helpers = { path = "../libra/common/grpc-helpers" }
libra-types = { path = "../libra/types" }
futures = { version = "0.3.0", features = ["compat"] }
sgtypes = { path = "../sgtypes" }
libra-crypto = { path = "../libra/crypto/crypto" }
anyhow = "1.0"
admission-control-proto = { path = "../libra/admission_control/admission-control-proto" }
admission-control-service = { path = "../libra/admission_control/admission-control-service", version = "0.1.0"}
vm-genesis = { path = "../libra/language/vm/vm-genesis" }
executable-helpers = { path = "../libra/common/executable-helpers" }
executor = { path = "../libra/executor" }
libra-config = { path = "../libra/config"}
structopt = "0.3.2"
lcs = { path = "../libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }

crash-handler = { path = "../libra/common/crash-handler" }
libra-mempool = { path = "../libra/mempool" }
libra-logger = { path = "../libra/common/logger"}
storage-client = { path = "../libra/storage/storage-client" }
storage-service = { path = "../libra/storage/storage-service" }
vm-runtime = { path = "../libra/language/vm/vm-runtime" }
vm-validator = { path = "../libra/vm-validator" }
tokio = { version = "0.2", features = ["full"] }
atomic_refcell = "0.1.3"
libra-state-view = {path = "../libra/storage/state-view"}
signal-hook = "0.1.10"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
async-trait = "0.1.13"
transaction-builder = { path = "../libra/language/transaction-builder"}
libra-node = { path = "../libra/libra-node" }
slog-scope = "4.0"
network = { path = "../libra/network", version = "0.1.0" }
consensus = { path = "../libra/consensus" }
state-synchronizer = { path = "../libra/state-synchronizer" }
parity-multiaddr = "0.5.0"
rand = "0.6.5"
async-std = { version = "1.0.1", features = ["unstable"]}
channel = { path = "../libra/common/channel", version = "0.1.0" }
futures-timer = "1.0.2"
rusty-fork = "0.2.1"
block-storage-client = { path = "../libra/consensus/block-storage-client" }
chain-state = { path = "../libra/consensus/chain-state" }

[dev-dependencies]
rusty-fork = "0.2.1"
