[package]
name = "sgcompiler"
version = "0.1.0"
authors = ["jolestar <jolestar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
libra-types = { path = "../libra/types" }
sgtypes = { path = "../sgtypes" }
stdlib = { path = "../libra/language/stdlib" }
ir_to_bytecode = { path = "../libra/language/compiler/ir_to_bytecode" }
vm = { path = "../libra/language/vm" }
bytecode-verifier = { path = "../libra/language/bytecode-verifier"}
logger = { path = "../libra/common/logger"}
state-view = {path = "../libra/storage/state-view"}
sgchain = { path = "../sgchain"}