[package]
name = "sgcompiler"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
anyhow = "1.0"
libra-types = { path = "../libra/types" }
sgtypes = { path = "../sgtypes" }
stdlib = { path = "../libra/language/stdlib" }
ir-to-bytecode = { path = "../libra/language/compiler/ir-to-bytecode" }
vm = { path = "../libra/language/vm" }
bytecode-verifier = { path = "../libra/language/bytecode-verifier"}
libra-logger = { path = "../libra/common/logger"}
libra-state-view = {path = "../libra/storage/state-view"}
