[package]
name = "sg_config"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
clap = "2.32"
get_if_addrs = "0.5.3"
hex = "0.3.2"
parity-multiaddr = "0.4.0"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
tempfile = "3.1.0"
toml = "0.4"

libra-crypto = { path = "../libra/crypto/crypto" }
prost = "0.5.0"
libra-logger = { path = "../libra/common/logger" }
failure = { path = "../libra/common/failure-ext", package = "libra-failure-ext"  }
libra-types = { path = "../libra/types" }

[dev-dependencies]

[features]
default = []
fuzzing = ["libra-crypto/fuzzing", "libra-types/fuzzing"]
