[package]
name = "sg_config"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.96", features = ["derive"] }
toml = "0.4"

anyhow = "1.0"

[dev-dependencies]

[features]
#default = []
#fuzzing = ["libra-crypto/fuzzing", "libra-types/fuzzing"]
