[package]
name = "sgnetwork"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
libp2p = { git ="https://github.com/starcoinorg/rust-libp2p",branch = "starcoin"}
tokio = { version = "0.1" }
futures = "0.1"
sg_config = { path = "../sgconfig" }
network_libp2p = { package = "network-libp2p", path = "../network-libp2p" }
libra-types = { path = "../libra/types" }
rand = "0.6.5"
anyhow = "1.0"
libra-logger = { path = "../libra/common/logger" }
hex = { version = "0.3.2", default-features = false }
parking_lot = "0.7.1"
parity-codec = { version = "3.2", features = ["derive"] }
env_logger = { version = "0.6" }
libra-crypto = { path = "../libra/crypto/crypto" }
bytes = "0.4"
