[package]
name = "sgstorage"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#itertools = "0.8.0"
#atomic_refcell = "0.1.3"
#tokio = "0.1.22"

serde = { version = "1.0.89", features = ["derive"] }
bincode = "1.1.1"
byteorder = "1.3.2"
num-derive = "0.2"
num-traits = "0.2"
proptest = "0.9.2"
proptest-derive = "0.1.2"

# deps on libra common types
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
crypto = { path = "../libra/crypto/crypto" }
libra_types = { path = "../libra/types", package = "libra-types" }
logger = { path = "../libra/common/logger"}


# deps on libra storage
accumulator = { path = "../libra/storage/accumulator" }
jellyfish-merkle = { path = "../libra/storage/jellyfish-merkle" }
libradb = { path = "../libra/storage/libradb" }
schemadb = { path = "../libra/storage/schemadb" }
state-view = {path = "../libra/storage/state-view"}

# deps on libra vm
vm_runtime_types = { path = "../libra/language/vm/vm_runtime/vm_runtime_types"}

# sg deps
sgtypes = { path = "../sgtypes" }
sgchain = { path = "../sgchain" }

[dev-dependencies]
libra_tools = { path = "../libra/common/tools", package = "tools" }