[package]
name = "sgstorage"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.2.0"
serde = { version = "1.0.89", features = ["derive"] }
bincode = "1.1.1"
byteorder = "1.3.2"
num-derive = "0.2"
num-traits = "0.2"
proptest = "0.9.2"
proptest-derive = "0.1.2"
arc-swap = "0.4.2"
itertools = "0.8.0"
prost = "0.5.0"

# deps on libra common types
failure = { path = "../libra/common/failure_ext", package = "failure_ext" }
crypto = { path = "../libra/crypto/crypto" }
libra-types = { path = "../libra/types", package = "libra-types" }
logger = { path = "../libra/common/logger"}
metrics = { path = "../libra/common/metrics" }
canonical-serialization = { path = "../libra/common/canonical-serialization" }
prost-ext = { path = "../libra/common/prost-ext" }

# deps on libra storage
accumulator = { path = "../libra/storage/accumulator" }
jellyfish-merkle = { path = "../libra/storage/jellyfish-merkle" }
libradb = { path = "../libra/storage/libradb" }
schemadb = { path = "../libra/storage/schemadb" }
state-view = {path = "../libra/storage/state-view"}
storage_proto = {path = "../libra/storage/storage_proto"}

# sg deps

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
rev = "3cd18c44d160a3cdba586d6502d51b7cc67efc59"

[dev-dependencies]
libra_tools = { path = "../libra/common/tools", package = "tools" }