[package]
name = "sgtypes"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "0.4.12", default-features = false }
prost = "0.6.1"
libra-prost-ext = { path = "../libra/common/prost-ext" }
radix_trie = "0.1.3"
rand = "0.6.5"
serde = { version = "1.0.96", features = ["derive"] }
itertools = "0.8.0"
hex = "0.3.2"
libra-types = { path = "../libra/types"}
lcs = { path = "../libra/common/lcs", package = "libra-canonical-serialization"}
libra-crypto = { path = "../libra/crypto/crypto" }
libra-crypto-derive = { path = "../libra/crypto/crypto-derive"}
anyhow = "1.0"
vm-runtime-types = { path = "../libra/language/vm/vm-runtime/vm-runtime-types"}
vm = { path = "../libra/language/vm"}
parity-multiaddr = "0.4.0"
num_enum = "0.4.1"
lazy_static = "1.3.0"
serde_json = "1.0.40"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.5.0"

[dev-dependencies]

[features]
default = []
fuzzing = ["libra-crypto/fuzzing", "libra-types/fuzzing"]
