[package]
name = "sgwallet"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
log = "0.4"
uuid = "0.8"
serde = {version = "1", default-features = false }
hex = "0.3.2"
rand = "0.6.5"
protobuf = "2.7"
prost = "0.5.0"
atomic_refcell = "0.1.3"
lazy_static = "1.3.0"
include_dir = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3.0" }
futures-timer = "2.0.2"
futures_locks = { version = "=0.3.0", package = "futures-locks", features=["tokio"]}
chrono = { version = "0.4.7", default-features = false }
itertools = "0.8.0"
backoff = "0.1.5"
async-trait = "0.1.13"
coerce-rt = { git = "https://github.com/starcoinorg/Coerce-rs.git", branch="stargate"}
anyhow = "1.0"
libra-types = { path = "../libra/types" }
libra-crypto = { path = "../libra/crypto/crypto" }
libra-logger = { path = "../libra/common/logger"}
libra-state-view = { path = "../libra/storage/state-view"}
libra-config = { path = "../libra/config"}
admission-control-proto = { path = "../libra/admission_control/admission-control-proto" }
stdlib = { path = "../libra/language/stdlib" }
ir-to-bytecode = { path = "../libra/language/compiler/ir-to-bytecode" }
vm-runtime = {path="../libra/language/vm/vm-runtime"}
vm = {path="../libra/language/vm"}
lcs = { path = "../libra/common/lcs", package = "libra-canonical-serialization"}
scratchpad = { path = "../libra/storage/scratchpad" }

sgtypes = { path = "../sgtypes" }
sgconfig = { path = "../sgconfig", package="sg_config" }
sgstorage = { path = "../sgstorage" }
sgcompiler = { path = "../sgcompiler"}
sgchain = { path = "../sgchain" }

[dev-dependencies]
libra-tools = { path = "../libra/common/tools"}
rusty-fork = "0.2.1"
slog-stdlog = "4"
